# AVA

./: .gitignore  README.md  local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: purple_dot.xml
app/src/main/res/layout/: activity_main.xml  activity_radio.xml  activity_voip_calibration.xml  fragment_first.xml  item_voip_app.xml  voice_assistant_widget.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kotlin-profile/: 09cb5564-8428-4417-a903-3b78f92208cc.profile  0d2f3988-f259-43d3-b38a-948988a200d9.profile  146009a5-f2a0-4e1b-9e96-16f9c6f6fc4a.profile  15195722-3a39-4f0b-914b-d62dc674e1f1.profile  3f80e0f9-40e9-4d33-991c-ce85863d0da4.profile  468806c0-f090-4fe9-9493-5bdc331b7f6a.profile  5dccb496-71bd-4647-879a-0d7a0d080db9.profile  6249c9d7-8c92-473a-b226-bec3fa070e2d.profile  6b788a67-7e1f-4fa1-8984-e311e510b7a6.profile  726f1746-318c-4d09-8b4d-0dffc4c4cfdd.profile  77d8a233-a256-4394-a291-f1eb55971bf8.profile  8c559be8-aeb5-4032-98c6-5ca3627ae174.profile  916913ad-4e1a-425d-ba68-e5ee462caf70.profile  b9c2ca9d-c544-4669-9153-831a6158a9fd.profile  bff70a3c-e784-4fef-84be-df2e9de54d02.profile  dd98bfb7-6ae5-4be5-a31c-47aca4f47506.profile  ea963faf-98ea-4b97-9ff8-6a60ef78f797.profile  f64ea46f-e2c3-4b16-885a-fc64bd83ef54.profile
whisper_native/: build.gradle
whisper_native/src/main/: AndroidManifest.xml
whisper_native/src/main/assets/: whisper-base.TOP_WORLD.tokens
whisper_native/src/main/cpp/: CMakeLists.txt  TFLiteEngine.cpp  TFLiteEngineJNI.cpp
(+65 files in other folders)
